tests/ui/tests/lowering/intrinsic-declaration-with-explicit-body.lushui
;;; TEST fail check

@intrinsic
data Void: Type of

@intrinsic thing = 0
